--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql = true
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.initialization-mode=always
